Use Collections.emptyList() for better compatibility
Co-authored-by: Reviahh <162878668+Reviahh@users.noreply.github.com>